--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,16 @@
 
 
 /* ---- Base Rules ---- */
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background: rgb(136,203,171);
-    background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%);
+    background: rgb(136, 203, 171);
+    background: linear-gradient(0deg, rgba(136, 203, 171, 1) 0%, rgba(0, 13, 60, 1) 100%);
     margin: 0;
     font-family: 'Merriweather', serif;
     color: #fff;
@@ -20,13 +27,14 @@ body {
 
 
 /* Typeography General*/
+
 h1 {
     font-family: 'Fira Sans', sans-serif;
     font-size: 3em;
     margin: 2em 1rem;
 }
 
-@media only screen and (min-width: 35em){
+@media only screen and (min-width: 35em) {
     h1 {
         font-size: 7em;
         margin: 2em 4rem 1em;
@@ -45,7 +53,9 @@ p {
     color: #eee;
 }
 
+
 /* ---- Layout Rules ---- */
+
 main {
     margin: 10vh 1em 10vh;
 }
@@ -58,12 +68,21 @@ main {
 section {
     position: relative;
     min-height: 80vh;
+    padding: 3%;
 }
 
 
 /* ---- Module Rules ---- */
 
+
 /* Navigation Styles*/
+
+a {
+    font-weight: bold;
+    color: #000;
+    text-decoration: none;
+}
+
 .navbar__menu ul {
     padding-left: 0;
     margin: 0;
@@ -75,7 +94,7 @@ section {
 }
 
 .navbar__menu .menu__link {
-    display: block;
+    display: inline-block;
     padding: 1em;
     font-weight: bold;
     text-decoration: none;
@@ -84,39 +103,69 @@ section {
 
 .navbar__menu .menu__link:hover {
     background: #333;
-    color: #fff;
+    color: rgb(136, 203, 171);
     transition: ease 0.3s all;
 }
 
+.navbar__menu .menu__link.active {
+    background-color: #333;
+}
+
+.navbar__menu .menu__link.active a,
+.navbar__menu .menu__link.active a:link {
+    color: rgb(136, 203, 171);
+    text-decoration: none;
+}
+
+@media (max-width:416px) {
+    a {
+        font-size: .75em;
+    }
+}
+
+@media (max-width:340px) {
+    a {
+        font-size: .65em;
+    }
+}
+
+
 /* Header Styles */
+
 .page__header {
     background: #fff;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 5;
+    transition: top 0.5s;
 }
 
+
 /* Footer Styles */
+
 .page__footer {
     background: #000;
     padding: 3em;
     color: #fff;
 }
 
-.page__footer p{
+.page__footer p {
     color: #fff;
 }
 
 
 /* ---- Theme Rules ---- */
+
+
 /* Landing Container Styles */
+
 .landing__container {
     padding: 1em;
     text-align: left;
 }
 
-@media only screen and (min-width: 35em){
+@media only screen and (min-width: 35em) {
     .landing__container {
         max-width: 50em;
         padding: 4em;
@@ -126,12 +175,18 @@ section {
 section:nth-of-type(even) .landing__container {
     margin-right: 0;
     margin-left: auto;
-    text-align: right; 
+    text-align: right;
 }
 
+
 /* Background Circles */
+
+
 /* Note that background circles are created with psuedo elements before and after */
+
+
 /* Circles appear to be random do to use of :nth-of-type psuedo class */
+
 section:nth-of-type(odd) .landing__container::before {
     content: '';
     background: rgba(255, 255, 255, 0.187);
@@ -146,8 +201,8 @@ section:nth-of-type(odd) .landing__container::before {
 
 section:nth-of-type(even) .landing__container::before {
     content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
+    background: rgb(255, 255, 255);
+    background: linear-gradient(0deg, rgba(255, 255, 255, .1) 0%, rgba(255, 255, 255, .2) 100%);
     position: absolute;
     top: 3em;
     right: 3em;
@@ -161,8 +216,8 @@ section:nth-of-type(even) .landing__container::before {
 
 section:nth-of-type(3n) .landing__container::after {
     content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
+    background: rgb(255, 255, 255);
+    background: linear-gradient(0deg, rgba(255, 255, 255, .1) 0%, rgba(255, 255, 255, .2) 100%);
     position: absolute;
     right: 0;
     bottom: 0;
@@ -176,8 +231,8 @@ section:nth-of-type(3n) .landing__container::after {
 
 section:nth-of-type(3n + 1) .landing__container::after {
     content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
+    background: rgb(255, 255, 255);
+    background: linear-gradient(0deg, rgba(255, 255, 255, .1) 0%, rgba(255, 255, 255, .2) 100%);
     position: absolute;
     right: 20vw;
     bottom: -5em;
@@ -191,11 +246,16 @@ section:nth-of-type(3n + 1) .landing__container::after {
 
 
 /* ---- Theme State Rules ---- */
+
+
 /* Section Active Styles */
+
+
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
+
 section.your-active-class {
     background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 section.your-active-class .landing__container::before {
@@ -208,16 +268,38 @@ section.your-active-class .landing__container::after {
     animation: rotate 5s linear 0s infinite forwards reverse;
 }
 
+
 /* Section Active Styles Keyframe Animations */
+
 @keyframes rotate {
-	from {
-		transform: rotate(0deg)
-		           translate(-1em)
-		           rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg)
-		           translate(-1em) 
-		           rotate(-360deg);
-	}
+    from {
+        transform: rotate(0deg) translate(-1em) rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg) translate(-1em) rotate(-360deg);
+    }
+}
+
+
+/* to top button */
+
+#top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50px;
+    font-size: 25px;
+    color: rgb(136, 203, 171);
+    background-color: #333;
+    box-shadow: 11px 7px 8px -6px rgba(0, 0, 0, 0.75);
+}
+
+#top:hover {
+    background-color: #555;
 }
